--- a/index.html
+++ b/index.html
@@ -487,9 +487,57 @@
                     </div>
                 </div>
 
+                <!-- 6. Memberships & Activities (New Row) -->
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <!-- Professional Memberships -->
+                    <div class="glass-panel p-8 rounded-3xl hover-card border-t-4 border-gisBlue">
+                        <h4 class="font-display text-xl font-bold mb-6 text-textMain flex items-center gap-2">
+                            <i data-lucide="users" class="w-5 h-5 text-gisBlue"></i> Professional Memberships
+                        </h4>
+                        <ul class="space-y-3">
+                            <li class="flex items-start gap-3">
+                                <div class="mt-1.5 w-1.5 h-1.5 rounded-full bg-gisBlue shrink-0"></div>
+                                <span class="text-textMuted text-sm font-medium">Coastal and Estuarine Research Federation (Since 2023)</span>
+                            </li>
+                            <li class="flex items-start gap-3">
+                                <div class="mt-1.5 w-1.5 h-1.5 rounded-full bg-gisBlue shrink-0"></div>
+                                <span class="text-textMuted text-sm font-medium">American Association of Geographers (Since 2023)</span>
+                            </li>
+                            <li class="flex items-start gap-3">
+                                <div class="mt-1.5 w-1.5 h-1.5 rounded-full bg-gisBlue shrink-0"></div>
+                                <span class="text-textMuted text-sm font-medium">American Geophysical Union (2024)</span>
+                            </li>
+                            <li class="flex items-start gap-3">
+                                <div class="mt-1.5 w-1.5 h-1.5 rounded-full bg-gisBlue shrink-0"></div>
+                                <span class="text-textMuted text-sm font-medium">International Geographical Honors Society - Gamma Theta Upsilon (Since 2025)</span>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Activities -->
+                    <div class="glass-panel p-8 rounded-3xl hover-card border-t-4 border-gisPink">
+                        <h4 class="font-display text-xl font-bold mb-6 text-textMain flex items-center gap-2">
+                            <i data-lucide="heart-handshake" class="w-5 h-5 text-gisPink"></i> Activities
+                        </h4>
+                        <ul class="space-y-4">
+                            <li class="relative pl-4 border-l-2 border-gisPink/30">
+                                <div class="text-textMain font-bold text-sm">Officer</div>
+                                <div class="text-sm text-textMuted">Indian Student Association, LSU (2022-2023)</div>
+                            </li>
+                            <li class="relative pl-4 border-l-2 border-gisPink/30">
+                                <div class="text-textMain font-bold text-sm">Volunteer</div>
+                                <div class="text-sm text-textMuted">State Rally Day 2022, 2023, 2024 (LSU)</div>
+                            </li>
+                            <li class="relative pl-4 border-l-2 border-gisPink/30">
+                                <div class="text-textMain font-bold text-sm">Volunteer</div>
+                                <div class="text-sm text-textMuted">Athletics and Cultural Events, Ramadevi Women's Autonomous College</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
-
         <!-- ================= EXPERIENCE PAGE ================= -->
         <div id="work" class="page-view">
             <h2 class="font-display text-4xl md:text-6xl font-bold mb-12 text-center text-textMain">Professional <span class="text-gradient-main">Experience</span></h2>
