--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <i data-lucide="layers"></i> View Projects
                     </button>
                     <!-- Download CV Button - Pointing to a dummy path as per request structure -->
-                    <a href="#" class="px-8 py-4 bg-white text-textMain border border-gray-200 rounded-xl font-bold hover:bg-gray-50 transition-all shadow-md hover:shadow-lg flex items-center justify-center gap-2 w-full sm:w-auto" onclick="alert('In a real deployment, this would trigger the PDF download.'); return false;">
+                    <a href="Curriculum Vitae Bijaylaxmi Sahoo_Dec2025.pdf" class="px-8 py-4 bg-white text-textMain border border-gray-200 rounded-xl font-bold hover:bg-gray-50 transition-all shadow-md hover:shadow-lg flex items-center justify-center gap-2 w-full sm:w-auto" onclick="alert('In a real deployment, this would trigger the PDF download.'); return false;">
                         <i data-lucide="download"></i> Download CV
                     </a>
                 </div>
